chore(entity template ui): fix links text ("There are no links ...") alignment
This was a regression: it got right aligned, instead of centered.

--- a/frontend/web/src/styles.css
+++ b/frontend/web/src/styles.css
@@ -1880,7 +1880,7 @@ button.include-attribute-submit-button.icon-only-button[data-tooltip]:focus-visi
 	overflow: visible;
 }
 
-.entity-template-view-links-table td:last-child {
+.entity-template-view-links-table td:not(.data-table-empty-cell):last-child {
 	text-align: right;
 }
 
